<resources>
    <string name="app_name">Adriano</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_carrossel">carrossel</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_cad_user">CadUserActivity</string>

    <string name="menu_todosOsProdutos">Todos os Produtos</string>
    <string name="menu_oleos">Óleos</string>
    <string name="menu_manteigas">Manteigas</string>
    <string name="menu_temperos">Temperos</string>
    <string name="menu_capsulas">Cápsulas</string>
    <string name="menu_graos">Grãos</string>
    <string name="menu_cereais">Cereais</string>
</resources>