<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_todosProd"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_todosOsProdutos" />
        <item
            android:id="@+id/nav_oleos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_oleos" />
        <item
            android:id="@+id/nav_manteigas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_manteigas" />
        <item
            android:id="@+id/nav_temperos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_temperos" />
        <item
            android:id="@+id/nav_capsulas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_capsulas" />
        <item
            android:id="@+id/nav_graos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_graos" />
        <item
            android:id="@+id/nav_cereias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_cereais" />

    </group>
</menu>